package NYT.NClickHouseServer.NProto;

import "yt_proto/yt/core/misc/proto/guid.proto";
import "yt_proto/yt/core/misc/proto/error.proto";

////////////////////////////////////////////////////////////////////////////////

message TChytRequest
{
    optional string query = 1;
    map<string, string> settings = 2;
}

////////////////////////////////////////////////////////////////////////////////

message TReqExecuteQuery
{
    optional TChytRequest chyt_request = 1;
    optional int64 row_count_limit = 2;
    optional NYT.NProto.TGuid query_id = 3;
}

message TRspExecuteQuery
{
    optional NYT.NProto.TGuid query_id = 1;
    optional NYT.NProto.TError error = 2;
    // Attachments contain wire-encoded data.
}

////////////////////////////////////////////////////////////////////////////////
